--- a/_posts/2024-09-14-Eng-O-Week.md
+++ b/_posts/2024-09-14-Eng-O-Week.md
@@ -12,7 +12,10 @@ This Year I got to be an orientation week leader! Team Light Teal 🔛🔝
 **Random Photos From O-Week!**  
 
 ---
-O-Week Aerial Photo!
-<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/aerial_photo.png" alt="Sample Notification" class="center-img">
+<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/aerial_photo.png" alt="Aerial view of O-Week crowd" style="display: block; margin: 0 auto;">
+
+<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/light_teal.png" alt="Team Light Teal group photo" style="display: block; margin: 0 auto;">
+
+<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/lol.png" alt="Funny moment from O-Week" style="display: block; margin: 0 auto;">
 
 ---
