--- a/_posts/2024-09-14-Eng-O-Week.md
+++ b/_posts/2024-09-14-Eng-O-Week.md
@@ -7,14 +7,18 @@ tags:
 date: 2024-09-14
 ---
 
-This Year I got to be an orientation week leader! Team Light Teal 🔛🔝
+This Year I got to be an orientation week leader for the University of Waterloo's 2024 Engineering Cohort! 
+Team Light Teal 🔛🔝
 
 **Random Photos From O-Week!**  
 
 ---
+The 2024 Aerial Photo!
 <img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/aerial_photo.png" alt="Aerial view of O-Week crowd" style="display: block; margin: 0 auto;">
 
-<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/light_teal.png" alt="Team Light Teal group photo" style="display: block; margin: 0 auto;">
+Our team banner this year 👀
+<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/light_teal.png" alt="Banner Photo" style="display: block; margin: 0 auto;">
 
-<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/lol.png" alt="Funny moment from O-Week" style="display: block; margin: 0 auto;">
+Me getting to dress up for theatrics 🐪
+<img src="{{ site.baseurl }}/assets/Posts/Eng-O-Week/lol.png" alt="Theatrics Lol" style="display: block; margin: 0 auto;">
 ---
